tests/call-function-diagnostic.stderr
error: mismatched types
  ┌─ test:4:15
  │
2 │ displays-text : (text :: Text) -> show text
  │                 -------------- expected because the input to the function has type `Text`
3 │ 
4 │ displays-text produces-text
  │               ^^^^^^^^^^^^^
  │               │
  │               expected `Text`, but found `() -> Text`
  │               try providing an input to this function
  │
  = provide input: `(produces-text {%input%})`
  = for more information, see https://wipple.dev/playground/?lesson=errors/mismatched-types

